# MyCROCO

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  Makefile  Makefile.2D  Makefile.3D  README.cmake.md  README.md  README_CONFIG_FILES  REAMDE.todo.md  ad-ATLN2-z0b-check  ad-DL-z0b-check  ad-atln-ctrl  ad-basin-ctrl  ad-internal-ctrl  adBuffer.F  adBuffer.c  adBuffer.h  adContext.c  adDebug.c  adinc.h  adj_driver.F  adj_tgt_driver.F  adparam.h  adtool_ampi_turn_code_insertion.h  ampiSupport.c  build-prefix-with-deps.sh  check_driver.F  code_insertion.F  code_insertion_tapenade.h  configure  cost_driver.F  cost_fun.F  cost_fun_atln.F  cost_fun_full_zeta.F  cost_fun_z0b_ctrl.F  cppdefs-ad-ftides-no-mpi.h  (+46 more)
AD/: Makefile  ad-DL-z0b-check  ad-atln-ctrl  ad-atln-ctrl-p  ad-basin-ctrl  ad-internal-ctrl  adBufferC.c  ad_step_3d.F  adinc.h  adj_driver.F  adjoinable-mpi.scm  adparam.h  adtool_ampi_turn_code_insertion.h  check_driver.F  cost_fun_full_zeta.F  cost_fun_z0b_ctrl.F  cppdefs-atln.h  cppdefs-dl.h  croco-atln-est.in  croco-atln-obs.in  croco.internal-friction-obs.in  distance.F  dummy.F  fsplit.el  get_ij.F  init_control_atln.F  init_control_internal.F  init_control_z0b_ctrl.F  mpi2ampi.py  optim_driver.F  param-dl.h  param_z0b_ctrl.h  read_obs_z0b_ctrl.F  set_state_atln.F  set_state_internal.F  set_state_z0b_ctrl.F  tgt_driver.F
AGRIF/: CMakeLists.txt  agrif2model.F90
AGRIF/AGRIF_FILES/: CMakeLists.txt  modcurgridfunctions.F90  modgrids.F90  modutil.F90
AGRIF/LIB/: CMakeLists.txt  Makefile  WorkWithlistvarindoloop.c  decl.c  decl.h  fortran.c  toamr.c
Aforc_ECMWF/: make_ECMWF_daily.m
Aforc_NCEP/: make_CFSR.m  make_NCEP.m
BENCH/: .gitignore  README.md  bench-croco.py  config.jsonc  config.yaml  (+1 more)
FABM/: cfabm.F  (+1 more)
OCEAN/: .init_scalars.F.swp  .output.F.swp  .read_inp.F.swp  .wrt_diags_avg.F.swp  Agrif2Model.F  CMakeLists.txt  FCT.h  MPI_Setup.F  MPI_setup_nbq.F90  Make.depend  Make.inc  Makedefs.generic  Makedefs.generic.AGRIF  Makedefs.generic.PSYCLONE  Makefile  MessPass2D.F  MessPass3D.F  MessPass3D_nbq.F  MessPass3D_noper.F  ab_ratio.F  abl1d.h  abl_ini.F  abl_step.F  abl_tke.F  agrif_ext.h  alfabeta.F  alfabeta_k.F  amub2_tri.F90  ana_grid.F  ana_initial.F  ana_vmix.F  analytical.F  analytical.F.orig  autotiling.F  autotiling.h  averages.h  backscatter.F  bbl.F  bbl.h  bio_BioEBUS.F  (+525 more)
OCEAN/CVTK/test_repro/CVTK_DEBUG_FAST_src/: comp_run_mpi.bash  extract_results_croco.bash
OCEAN/CVTK/test_repro/CVTK_DEBUG_FAST_src/Scripts_ana/Configure_Test_ana/: CANYON
OCEAN/CVTK/test_repro/CVTK_DEBUG_FAST_src/Scripts_ana/src_test/: create_link_for_Test_ana.sh
OCEAN/CVTK/test_repro/CVTK_DEBUG_FAST_src/Scripts_reg/: create_link_master_reg.sh
OCEAN/CVTK/test_repro/CVTK_DEBUG_FAST_src/Scripts_reg/src_test/: create_link_for_Test_reg.sh  mk_TestDIR_reg.bash  test_croco_reg.sh
OCEAN/CVTK/test_repro/CVTK_DEBUG_FAST_src/TEST_CASES_CVTK/: croco.in.Grav_adj_nbq  croco.in.Internal  croco.in.Jet  croco.in.KHINST_nbq  croco.in.Rip  croco.in.River  croco.in.ShoreFace  croco.in.Tank_nbq  plot_upwelling.m
OCEAN/CVTK/test_repro/CVTK_DEBUG_FAST_src/TEST_CASES_CVTK/LR/: croco.in.LR
OCEAN/CVTK/test_repro/CVTK_DEBUG_FAST_src/TEST_CASES_CVTK/VHR/: croco.in.VHR
OCEAN/CVTK/test_repro/CVTK_DEBUG_FAST_src/src_global/: gather_all.bash.pbs
OCEAN/MPP_PREP/: Makefile_irene
OCEAN/OCEAN/: MPI_setup_nbq.F90  MessPass3D_nbq.F  alfabeta.F  autotiling.F  averages.h  compute_vert_tracer_fluxes.h  cpl_prism_get.F  cpl_prism_getvar.F  croco.in.1  croco_forecast.in  croco_hindcast.in  croco_oa.F90  def_diagsM.F  def_diags_eddy.F  def_surf.F  exchange_3d_tile_init_nbq.h  get_bry.F  get_bry_bio.F  get_bry_wkb.F  get_btflux.F  get_initial.F  get_smflux.F  gls_mixing.F  grid.h  hmix_coef.F  init_arrays.F  initial_nbq.F  lmd_skpp1994.F  lmd_skpp2005.F  main.F  mixing.h  ncscrum.h  online_get_bulk.F  output.F  param_F90.h  read_inp.F  sediment.h  set_depth.F  set_diags_eddy_avg.F  set_diags_vrt_avg.F  (+20 more)
OCEAN/PISCES/: ocean2pisces.h90  p4zbio.F90  p4zche.F90  p4zint.F90  p4zmeso.F90  p4zprod.F90  p4zrem.F90  p4zsink.F90  sms_pisces.F90  trcsms_pisces.F90  trcwri_pisces.F90
OCEAN/Run/TEST_CASES/: croco.in.Grav_adj_nbq  croco.in.Jet  croco.in.KHINST_nbq  croco.in.Vortex  plot_innershelf.m  plot_overflow.m  plot_tank.m
OCEAN/SCRIPTS/Plurimonths_scripts/: run_croco.bash
OCEAN/TEST_CASES/: croco.in.Internal  croco.in.River  plot_isoliton.m  plot_sandbar.m
OCEAN/XIOS/: domain_def.xml  field_def.xml_full  iodef_KH.xml  send_xios_diags.F
OCEAN/_TRASH/: croco_inter.in
OCEAN/bio_sediments/: bbl.F
OCEAN/include/: compute_horiz_tracer_fluxes.h  cppdefs_dev.h  exchange_2d_tile.h  exchange_3d_tile.h  lmd_kpp.h  nbq.h  private_scratch.h  private_scratch_AMR.h  scalars.h  set_global_definitions.h  sources.h  v_vadv_order5.h  w_vadv_order5.h
OCEAN/lib/: toolsectodat.F90
OCEAN/main/: analytical.F  main.F  setup_grid1.F
OCEAN/main_forcing/: get_bry.F  get_grid.F  get_initial.F  get_srflux.F  get_sss.F  get_tclima.F  get_uclima.F
OCEAN/model_diagnostics/: diag.F  grid_stiffness.F
OCEAN/mpi/: exchange.F
OCEAN/netcdf/: set_avg.F  set_cycle.F  wrt_avg.F  wrt_his.F  wrt_surf_avg.F
OCEAN/nonhydro/: rnbq_bc.F  step3d_w.F
OCEAN/obsolete_src/: debug.F.OLDrepropar_obsoletewint
OCEAN/psyclone/: psyclone.preprocessor.skip.acc.sh  skip.openacc.rules.lst
OCEAN/psyclone/scripts/: acc_kernels_explicit_data_movement_trans.py  acc_kernels_step3d.py  acc_mixed_explicit_data_movement_trans.py  poseidon_extensions.py  poseidon_openacc_kernels_tmp.py  poseidon_openacc_kernels_wait.py  posiedon_trans.py  test_poseidon.py  trans_dummy.py
OCEAN/ts_3d/: step3d_uv1.F  t3dbc.F  t3dmix_spg.F  uv3dmix_spg.F  v3dbc.F  wetdry.F
OCEAN/wave_forcing/: gls_mixing.F
TWINCHECKER/: CMakeLists.txt  README.md  config.jsonc  test_twin_checker.cpp  trans_array_indices_to_get_full.py  twin_checker.cpp  twin_checker.hpp  twin_checker.mod  twin_checker_extr_file_list.py  twin_checker_impl.hpp  twin_checker_mod.F90  twin_checker_runner.sh  twin_psyclone_script.py
TWINCHECKER/from-malt/: config.h
(+2766 files in other folders)
